--- a/notebooks/1_credentials.ipynb
+++ b/notebooks/1_credentials.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "3fb54b95",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import logging\n",
@@ -97,7 +99,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found the following saved programs: ['2023A002']\n"
+      "Found the following saved programs: ['2023A002', '2023A999']\n"
      ]
     }
    ],
@@ -105,7 +107,7 @@
     "print(f\"Found the following saved programs: {winter.get_programs()}\")\n",
     "if len(winter.get_programs()) == 0:\n",
     "    print(\"No programs found. Add one to get started:\")\n",
-    "    winter.add_program(overwrite=True) "
+    "    winter.add_program(overwrite=True)"
    ]
   },
   {
@@ -118,6 +120,14 @@
     "# Uncomment to add additional programs\n",
     "# winter.add_program(overwrite=True) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b16a0900",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
