--- a/notebooks/2_too.ipynb
+++ b/notebooks/2_too.ipynb
@@ -9,8 +9,7 @@
    "source": [
     "import logging\n",
     "from winterapi import WinterAPI\n",
-    "from wintertoo.models import WinterFieldToO, WinterRaDecToO\n",
-    "from wintertoo.fields import get_best_field"
+    "from wintertoo.models import WinterRaDecToO"
    ]
   },
   {
@@ -53,48 +52,43 @@
    "source": [
     "# Target details\n",
     "ra_deg = 210.910674637\n",
-    "dec_deg = 54.3116510708"
+    "dec_deg = 54.3116510708\n",
+    "\n",
+    "# By default, a RaDecToo will use the nearest field "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9e41347c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best field is:\n",
-      "ID          3944.00000\n",
-      "RA           211.56398\n",
-      "Dec           54.00000\n",
-      "Ebv            1.00000\n",
-      "Gal_Long     100.91519\n",
-      "Gal_Lat       59.81334\n",
-      "Ecl_Long     175.49104\n",
-      "Ecl_Lat       59.83739\n",
-      "Entry       3943.00000\n",
-      "Name: 3943, dtype: float64\n"
-     ]
-    }
-   ],
-   "source": [
-    "winter_field = get_best_field(ra_deg, dec_deg)\n",
-    "print(f\"Best field is:\\n{winter_field}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "id": "031d4780",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "WinterFieldToO(field_id=3944, filters=['J'], target_priority=50.0, t_exp=30.0, n_exp=1, n_dither=9, dither_distance=15.0, start_time_mjd=60104.05872084765, end_time_mjd=60105.04872084941, max_airmass=2.0)"
+       "WinterRaDecToO(ra_deg=210.910674637, dec_deg=54.3116510708, use_field_grid=True, filters=['J'], target_priority=50.0, t_exp=30.0, n_exp=1, n_dither=9, dither_distance=15.0, start_time_mjd=60105.040591466786, end_time_mjd=60106.030591468494, max_airmass=2.0)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "too_j = WinterRaDecToO(ra_deg=ra_deg, dec_deg=dec_deg, n_dither=9, filters=[\"J\"])\n",
+    "too_j"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0c5385d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "WinterRaDecToO(ra_deg=210.910674637, dec_deg=54.3116510708, use_field_grid=True, filters=['Hs'], target_priority=50.0, t_exp=30.0, n_exp=1, n_dither=15, dither_distance=15.0, start_time_mjd=60105.040591466786, end_time_mjd=60106.030591468494, max_airmass=2.0)"
       ]
      },
      "execution_count": 7,
@@ -103,20 +97,20 @@
     }
    ],
    "source": [
-    "too_j = WinterFieldToO(field_id=winter_field[\"ID\"], n_dither=9, filters=[\"J\"])\n",
-    "too_j"
+    "too_h = WinterRaDecToO(ra_deg=ra_deg, dec_deg=dec_deg, n_dither=15, filters=[\"Hs\"])\n",
+    "too_h"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0c5385d9",
+   "id": "1aa5e6d5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "WinterFieldToO(field_id=3944, filters=['Hs'], target_priority=50.0, t_exp=30.0, n_exp=1, n_dither=15, dither_distance=15.0, start_time_mjd=60104.05872084765, end_time_mjd=60105.04872084941, max_airmass=2.0)"
+       "WinterRaDecToO(ra_deg=210.910674637, dec_deg=54.3116510708, use_field_grid=True, filters=['Y'], target_priority=50.0, t_exp=20.0, n_exp=1, n_dither=9, dither_distance=15.0, start_time_mjd=60105.040591466786, end_time_mjd=60106.030591468494, max_airmass=2.0)"
       ]
      },
      "execution_count": 8,
@@ -125,35 +119,13 @@
     }
    ],
    "source": [
-    "too_h = WinterFieldToO(field_id=winter_field[\"ID\"], n_dither=15, filters=[\"Hs\"])\n",
-    "too_h"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "1aa5e6d5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "WinterFieldToO(field_id=3944, filters=['Y'], target_priority=50.0, t_exp=20.0, n_exp=1, n_dither=9, dither_distance=15.0, start_time_mjd=60104.05872084765, end_time_mjd=60105.04872084941, max_airmass=2.0)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "too_y = WinterFieldToO(field_id=winter_field[\"ID\"], n_dither=9, filters=[\"Y\"], t_exp=20.)\n",
+    "too_y = WinterRaDecToO(ra_deg=ra_deg, dec_deg=dec_deg, n_dither=9, filters=[\"Y\"], t_exp=20.)\n",
     "too_y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "b7be6f9f",
    "metadata": {},
    "outputs": [],
@@ -163,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "555800e8",
    "metadata": {},
    "outputs": [
@@ -171,7 +143,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Available programs: ['2023A002']\n"
+      "Available programs: ['2023A002', '2023A999']\n"
      ]
     }
    ],
@@ -183,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "ec20aa42",
    "metadata": {
     "scrolled": true
@@ -240,8 +212,8 @@
        "      <td>Stein</td>\n",
        "      <td>2023A002</td>\n",
        "      <td>1</td>\n",
-       "      <td>60104.058721</td>\n",
-       "      <td>60105.048721</td>\n",
+       "      <td>60105.040591</td>\n",
+       "      <td>60106.030591</td>\n",
        "      <td>False</td>\n",
        "      <td>2.0</td>\n",
        "      <td>9</td>\n",
@@ -259,8 +231,8 @@
        "      <td>Stein</td>\n",
        "      <td>2023A002</td>\n",
        "      <td>1</td>\n",
-       "      <td>60104.058721</td>\n",
-       "      <td>60105.048721</td>\n",
+       "      <td>60105.040591</td>\n",
+       "      <td>60106.030591</td>\n",
        "      <td>False</td>\n",
        "      <td>2.0</td>\n",
        "      <td>9</td>\n",
@@ -278,8 +250,8 @@
        "      <td>Stein</td>\n",
        "      <td>2023A002</td>\n",
        "      <td>1</td>\n",
-       "      <td>60104.058721</td>\n",
-       "      <td>60105.048721</td>\n",
+       "      <td>60105.040591</td>\n",
+       "      <td>60106.030591</td>\n",
        "      <td>False</td>\n",
        "      <td>2.0</td>\n",
        "      <td>15</td>\n",
@@ -297,9 +269,9 @@
        "2  211.56398    54.0     3944     Hs          30.0      50.0  Stein  2023A002   \n",
        "\n",
        "   progID    validStart     validStop  observed  maxAirmass  ditherNumber  \\\n",
-       "0       1  60104.058721  60105.048721     False         2.0             9   \n",
-       "1       1  60104.058721  60105.048721     False         2.0             9   \n",
-       "2       1  60104.058721  60105.048721     False         2.0            15   \n",
+       "0       1  60105.040591  60106.030591     False         2.0             9   \n",
+       "1       1  60105.040591  60106.030591     False         2.0             9   \n",
+       "2       1  60105.040591  60106.030591     False         2.0            15   \n",
        "\n",
        "   ditherStepSize  obsHistID  \n",
        "0            15.0          0  \n",
@@ -307,7 +279,7 @@
        "2            15.0          2  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "2a6462c6",
    "metadata": {},
    "outputs": [
@@ -332,7 +304,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "dfebd472",
    "metadata": {},
    "outputs": [
@@ -403,8 +375,8 @@
        "      <td>Stein</td>\n",
        "      <td>2023A002</td>\n",
        "      <td>1</td>\n",
-       "      <td>60104.058721</td>\n",
-       "      <td>60105.048721</td>\n",
+       "      <td>60105.040591</td>\n",
+       "      <td>60106.030591</td>\n",
        "      <td>False</td>\n",
        "      <td>2.0</td>\n",
        "      <td>9</td>\n",
@@ -422,8 +394,8 @@
        "      <td>Stein</td>\n",
        "      <td>2023A002</td>\n",
        "      <td>1</td>\n",
-       "      <td>60104.058721</td>\n",
-       "      <td>60105.048721</td>\n",
+       "      <td>60105.040591</td>\n",
+       "      <td>60106.030591</td>\n",
        "      <td>False</td>\n",
        "      <td>2.0</td>\n",
        "      <td>9</td>\n",
@@ -441,8 +413,8 @@
        "      <td>Stein</td>\n",
        "      <td>2023A002</td>\n",
        "      <td>1</td>\n",
-       "      <td>60104.058721</td>\n",
-       "      <td>60105.048721</td>\n",
+       "      <td>60105.040591</td>\n",
+       "      <td>60106.030591</td>\n",
        "      <td>False</td>\n",
        "      <td>2.0</td>\n",
        "      <td>15</td>\n",
@@ -460,9 +432,9 @@
        "2  211.56398    54.0     3944     Hs          30.0      50.0  Stein  2023A002   \n",
        "\n",
        "   progID    validStart     validStop  observed  maxAirmass  ditherNumber  \\\n",
-       "0       1  60104.058721  60105.048721     False         2.0             9   \n",
-       "1       1  60104.058721  60105.048721     False         2.0             9   \n",
-       "2       1  60104.058721  60105.048721     False         2.0            15   \n",
+       "0       1  60105.040591  60106.030591     False         2.0             9   \n",
+       "1       1  60105.040591  60106.030591     False         2.0             9   \n",
+       "2       1  60105.040591  60106.030591     False         2.0            15   \n",
        "\n",
        "   ditherStepSize  obsHistID  \n",
        "0            15.0          0  \n",
@@ -470,7 +442,7 @@
        "2            15.0          2  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
