--- a/notebooks/2_too.ipynb
+++ b/notebooks/2_too.ipynb
@@ -66,7 +66,7 @@
     {
      "data": {
       "text/plain": [
-       "WinterRaDecToO(ra_deg=210.910674637, dec_deg=54.3116510708, use_field_grid=True, filters=['J'], target_priority=50.0, t_exp=30.0, n_exp=1, n_dither=9, dither_distance=15.0, start_time_mjd=60105.040591466786, end_time_mjd=60106.030591468494, max_airmass=2.0)"
+       "WinterRaDecToO(ra_deg=210.910674637, dec_deg=54.3116510708, use_field_grid=True, filters=['J', 'Hs'], target_priority=50.0, t_exp=30.0, n_exp=1, n_dither=9, dither_distance=15.0, start_time_mjd=60105.0450582844, end_time_mjd=60106.035058286274, max_airmass=2.0)"
       ]
      },
      "execution_count": 6,
@@ -75,45 +75,23 @@
     }
    ],
    "source": [
-    "too_j = WinterRaDecToO(ra_deg=ra_deg, dec_deg=dec_deg, n_dither=9, filters=[\"J\"])\n",
-    "too_j"
+    "too_jh = WinterRaDecToO(ra_deg=ra_deg, dec_deg=dec_deg, n_dither=9, filters=[\"J\", \"Hs\"])\n",
+    "too_jh"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0c5385d9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "WinterRaDecToO(ra_deg=210.910674637, dec_deg=54.3116510708, use_field_grid=True, filters=['Hs'], target_priority=50.0, t_exp=30.0, n_exp=1, n_dither=15, dither_distance=15.0, start_time_mjd=60105.040591466786, end_time_mjd=60106.030591468494, max_airmass=2.0)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "too_h = WinterRaDecToO(ra_deg=ra_deg, dec_deg=dec_deg, n_dither=15, filters=[\"Hs\"])\n",
-    "too_h"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "id": "1aa5e6d5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "WinterRaDecToO(ra_deg=210.910674637, dec_deg=54.3116510708, use_field_grid=True, filters=['Y'], target_priority=50.0, t_exp=20.0, n_exp=1, n_dither=9, dither_distance=15.0, start_time_mjd=60105.040591466786, end_time_mjd=60106.030591468494, max_airmass=2.0)"
+       "WinterRaDecToO(ra_deg=210.910674637, dec_deg=54.3116510708, use_field_grid=True, filters=['Y'], target_priority=50.0, t_exp=20.0, n_exp=1, n_dither=9, dither_distance=15.0, start_time_mjd=60105.0450582844, end_time_mjd=60106.035058286274, max_airmass=2.0)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,17 +103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "b7be6f9f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "too_list = [too_y, too_j, too_h]"
+    "too_list = [too_y, too_jh]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "555800e8",
    "metadata": {},
    "outputs": [
@@ -155,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "ec20aa42",
    "metadata": {
     "scrolled": true
@@ -212,8 +190,8 @@
        "      <td>Stein</td>\n",
        "      <td>2023A002</td>\n",
        "      <td>1</td>\n",
-       "      <td>60105.040591</td>\n",
-       "      <td>60106.030591</td>\n",
+       "      <td>60105.045058</td>\n",
+       "      <td>60106.035058</td>\n",
        "      <td>False</td>\n",
        "      <td>2.0</td>\n",
        "      <td>9</td>\n",
@@ -231,8 +209,8 @@
        "      <td>Stein</td>\n",
        "      <td>2023A002</td>\n",
        "      <td>1</td>\n",
-       "      <td>60105.040591</td>\n",
-       "      <td>60106.030591</td>\n",
+       "      <td>60105.045058</td>\n",
+       "      <td>60106.035058</td>\n",
        "      <td>False</td>\n",
        "      <td>2.0</td>\n",
        "      <td>9</td>\n",
@@ -250,11 +228,11 @@
        "      <td>Stein</td>\n",
        "      <td>2023A002</td>\n",
        "      <td>1</td>\n",
-       "      <td>60105.040591</td>\n",
-       "      <td>60106.030591</td>\n",
+       "      <td>60105.045058</td>\n",
+       "      <td>60106.035058</td>\n",
        "      <td>False</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>15</td>\n",
+       "      <td>9</td>\n",
        "      <td>15.0</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -269,9 +247,9 @@
        "2  211.56398    54.0     3944     Hs          30.0      50.0  Stein  2023A002   \n",
        "\n",
        "   progID    validStart     validStop  observed  maxAirmass  ditherNumber  \\\n",
-       "0       1  60105.040591  60106.030591     False         2.0             9   \n",
-       "1       1  60105.040591  60106.030591     False         2.0             9   \n",
-       "2       1  60105.040591  60106.030591     False         2.0            15   \n",
+       "0       1  60105.045058  60106.035058     False         2.0             9   \n",
+       "1       1  60105.045058  60106.035058     False         2.0             9   \n",
+       "2       1  60105.045058  60106.035058     False         2.0             9   \n",
        "\n",
        "   ditherStepSize  obsHistID  \n",
        "0            15.0          0  \n",
@@ -279,7 +257,7 @@
        "2            15.0          2  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "2a6462c6",
    "metadata": {},
    "outputs": [
@@ -304,7 +282,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "dfebd472",
    "metadata": {},
    "outputs": [
@@ -375,8 +353,8 @@
        "      <td>Stein</td>\n",
        "      <td>2023A002</td>\n",
        "      <td>1</td>\n",
-       "      <td>60105.040591</td>\n",
-       "      <td>60106.030591</td>\n",
+       "      <td>60105.045058</td>\n",
+       "      <td>60106.035058</td>\n",
        "      <td>False</td>\n",
        "      <td>2.0</td>\n",
        "      <td>9</td>\n",
@@ -394,8 +372,8 @@
        "      <td>Stein</td>\n",
        "      <td>2023A002</td>\n",
        "      <td>1</td>\n",
-       "      <td>60105.040591</td>\n",
-       "      <td>60106.030591</td>\n",
+       "      <td>60105.045058</td>\n",
+       "      <td>60106.035058</td>\n",
        "      <td>False</td>\n",
        "      <td>2.0</td>\n",
        "      <td>9</td>\n",
@@ -413,11 +391,11 @@
        "      <td>Stein</td>\n",
        "      <td>2023A002</td>\n",
        "      <td>1</td>\n",
-       "      <td>60105.040591</td>\n",
-       "      <td>60106.030591</td>\n",
+       "      <td>60105.045058</td>\n",
+       "      <td>60106.035058</td>\n",
        "      <td>False</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>15</td>\n",
+       "      <td>9</td>\n",
        "      <td>15.0</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -432,9 +410,9 @@
        "2  211.56398    54.0     3944     Hs          30.0      50.0  Stein  2023A002   \n",
        "\n",
        "   progID    validStart     validStop  observed  maxAirmass  ditherNumber  \\\n",
-       "0       1  60105.040591  60106.030591     False         2.0             9   \n",
-       "1       1  60105.040591  60106.030591     False         2.0             9   \n",
-       "2       1  60105.040591  60106.030591     False         2.0            15   \n",
+       "0       1  60105.045058  60106.035058     False         2.0             9   \n",
+       "1       1  60105.045058  60106.035058     False         2.0             9   \n",
+       "2       1  60105.045058  60106.035058     False         2.0             9   \n",
        "\n",
        "   ditherStepSize  obsHistID  \n",
        "0            15.0          0  \n",
@@ -442,7 +420,7 @@
        "2            15.0          2  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
