Update winter demos

--- a/notebooks/commissioning.ipynb
+++ b/notebooks/commissioning.ipynb
@@ -40,7 +40,7 @@
    "outputs": [],
    "source": [
     "# Program details\n",
-    "program = \"2023A002\""
+    "program = \"2023A005\""
    ]
   },
   {
@@ -51,10 +51,8 @@
    "outputs": [],
    "source": [
     "# Target details\n",
-    "ra_deg = 210.910674637\n",
-    "dec_deg = 54.3116510708\n",
-    "\n",
-    "# By default, a RaDecToo will use the nearest field "
+    "ra_deg = 186.4410788\n",
+    "dec_deg = 12.6635813"
    ]
   },
   {
@@ -64,56 +62,35 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "WinterRaDecToO(ra_deg=210.910674637, dec_deg=54.3116510708, use_field_grid=True, filters=['J', 'Hs'], target_priority=50.0, t_exp=30.0, n_exp=1, n_dither=9, dither_distance=15.0, start_time_mjd=60108.30343543394, end_time_mjd=60109.29343543545, max_airmass=2.0)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ra_deg=186.4410788 dec_deg=12.6635813 use_field_grid=True filters=['Y', 'J', 'Hs'] target_priority=50.0 t_exp=150.0 n_exp=1 n_dither=9 dither_distance=15.0 start_time_mjd=60109.37131138747 end_time_mjd=60110.36131138947 max_airmass=2.0\n"
+     ]
     }
    ],
    "source": [
-    "too_jh = WinterRaDecToO(ra_deg=ra_deg, dec_deg=dec_deg, n_dither=9, filters=[\"J\", \"Hs\"])\n",
-    "too_jh"
+    "kwargs = {\n",
+    "    \"ra_deg\": ra_deg,\n",
+    "    \"dec_deg\": dec_deg,\n",
+    "#     \"filters\": [\"J\"],\n",
+    "    \"use_field_grid\": True, # By default, a RaDecToo will use the nearest field \n",
+    "#     \"target_priority\": 200.0\n",
+    "}\n",
+    "\n",
+    "too_list = [\n",
+    "    WinterRaDecToO(n_dither=9, t_exp=150, **kwargs),\n",
+    "#     WinterRaDecToO(n_dither=5, t_exp=150, **kwargs),\n",
+    "#     WinterRaDecToO(n_dither=9, t_exp=45, **kwargs)\n",
+    "]\n",
+    "\n",
+    "for x in too_list:\n",
+    "    print(x)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1aa5e6d5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "WinterRaDecToO(ra_deg=210.910674637, dec_deg=54.3116510708, use_field_grid=True, filters=['Y'], target_priority=50.0, t_exp=20.0, n_exp=1, n_dither=9, dither_distance=15.0, start_time_mjd=60108.30343543394, end_time_mjd=60109.29343543545, max_airmass=2.0)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "too_y = WinterRaDecToO(ra_deg=ra_deg, dec_deg=dec_deg, n_dither=9, filters=[\"Y\"], t_exp=20.)\n",
-    "too_y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "b7be6f9f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "too_list = [too_y, too_jh]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
    "id": "555800e8",
    "metadata": {},
    "outputs": [
@@ -121,7 +98,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Available programs: ['2023A002', '2023A999']\n"
+      "Available programs: ['2023A002', '2023A999', '2023A005']\n"
      ]
     }
    ],
@@ -133,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "ec20aa42",
    "metadata": {
     "scrolled": true
@@ -181,17 +158,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>211.56398</td>\n",
-       "      <td>54.0</td>\n",
-       "      <td>3944</td>\n",
+       "      <td>186.17143</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>15956</td>\n",
        "      <td>Y</td>\n",
-       "      <td>20.0</td>\n",
+       "      <td>150.0</td>\n",
        "      <td>50.0</td>\n",
-       "      <td>Stein</td>\n",
-       "      <td>2023A002</td>\n",
+       "      <td>Frostig</td>\n",
+       "      <td>2023A005</td>\n",
        "      <td>1</td>\n",
-       "      <td>60105.045058</td>\n",
-       "      <td>60106.035058</td>\n",
+       "      <td>60109.371311</td>\n",
+       "      <td>60110.361311</td>\n",
        "      <td>False</td>\n",
        "      <td>2.0</td>\n",
        "      <td>9</td>\n",
@@ -200,17 +177,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>211.56398</td>\n",
-       "      <td>54.0</td>\n",
-       "      <td>3944</td>\n",
+       "      <td>186.17143</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>15956</td>\n",
        "      <td>J</td>\n",
-       "      <td>30.0</td>\n",
+       "      <td>150.0</td>\n",
        "      <td>50.0</td>\n",
-       "      <td>Stein</td>\n",
-       "      <td>2023A002</td>\n",
+       "      <td>Frostig</td>\n",
+       "      <td>2023A005</td>\n",
        "      <td>1</td>\n",
-       "      <td>60105.045058</td>\n",
-       "      <td>60106.035058</td>\n",
+       "      <td>60109.371311</td>\n",
+       "      <td>60110.361311</td>\n",
        "      <td>False</td>\n",
        "      <td>2.0</td>\n",
        "      <td>9</td>\n",
@@ -219,17 +196,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>211.56398</td>\n",
-       "      <td>54.0</td>\n",
-       "      <td>3944</td>\n",
+       "      <td>186.17143</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>15956</td>\n",
        "      <td>Hs</td>\n",
-       "      <td>30.0</td>\n",
+       "      <td>150.0</td>\n",
        "      <td>50.0</td>\n",
-       "      <td>Stein</td>\n",
-       "      <td>2023A002</td>\n",
+       "      <td>Frostig</td>\n",
+       "      <td>2023A005</td>\n",
        "      <td>1</td>\n",
-       "      <td>60105.045058</td>\n",
-       "      <td>60106.035058</td>\n",
+       "      <td>60109.371311</td>\n",
+       "      <td>60110.361311</td>\n",
        "      <td>False</td>\n",
        "      <td>2.0</td>\n",
        "      <td>9</td>\n",
@@ -241,23 +218,23 @@
        "</div>"
       ],
       "text/plain": [
-       "       raDeg  decDeg  fieldID filter  visitExpTime  priority progPI  progName  \\\n",
-       "0  211.56398    54.0     3944      Y          20.0      50.0  Stein  2023A002   \n",
-       "1  211.56398    54.0     3944      J          30.0      50.0  Stein  2023A002   \n",
-       "2  211.56398    54.0     3944     Hs          30.0      50.0  Stein  2023A002   \n",
+       "       raDeg  decDeg  fieldID filter  visitExpTime  priority   progPI  \\\n",
+       "0  186.17143    13.0    15956      Y         150.0      50.0  Frostig   \n",
+       "1  186.17143    13.0    15956      J         150.0      50.0  Frostig   \n",
+       "2  186.17143    13.0    15956     Hs         150.0      50.0  Frostig   \n",
        "\n",
-       "   progID    validStart     validStop  observed  maxAirmass  ditherNumber  \\\n",
-       "0       1  60105.045058  60106.035058     False         2.0             9   \n",
-       "1       1  60105.045058  60106.035058     False         2.0             9   \n",
-       "2       1  60105.045058  60106.035058     False         2.0             9   \n",
+       "   progName  progID    validStart     validStop  observed  maxAirmass  \\\n",
+       "0  2023A005       1  60109.371311  60110.361311     False         2.0   \n",
+       "1  2023A005       1  60109.371311  60110.361311     False         2.0   \n",
+       "2  2023A005       1  60109.371311  60110.361311     False         2.0   \n",
        "\n",
-       "   ditherStepSize  obsHistID  \n",
-       "0            15.0          0  \n",
-       "1            15.0          1  \n",
-       "2            15.0          2  "
+       "   ditherNumber  ditherStepSize  obsHistID  \n",
+       "0             9            15.0          0  \n",
+       "1             9            15.0          1  \n",
+       "2             9            15.0          2  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +268,7 @@
     "api_res, api_schedule = winter.submit_too(\n",
     "    program_name=program,\n",
     "    data=too_list,\n",
-    "    submit_trigger=False\n",
+    "    submit_trigger=True\n",
     ")\n",
     "api_res"
    ]
@@ -344,17 +321,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>211.56398</td>\n",
-       "      <td>54.0</td>\n",
-       "      <td>3944</td>\n",
+       "      <td>186.17143</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>15956</td>\n",
        "      <td>Y</td>\n",
-       "      <td>20.0</td>\n",
+       "      <td>150.0</td>\n",
        "      <td>50.0</td>\n",
-       "      <td>Stein</td>\n",
-       "      <td>2023A002</td>\n",
+       "      <td>Frostig</td>\n",
+       "      <td>2023A005</td>\n",
        "      <td>1</td>\n",
-       "      <td>60105.045058</td>\n",
-       "      <td>60106.035058</td>\n",
+       "      <td>60109.371311</td>\n",
+       "      <td>60110.361311</td>\n",
        "      <td>False</td>\n",
        "      <td>2.0</td>\n",
        "      <td>9</td>\n",
@@ -363,17 +340,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>211.56398</td>\n",
-       "      <td>54.0</td>\n",
-       "      <td>3944</td>\n",
+       "      <td>186.17143</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>15956</td>\n",
        "      <td>J</td>\n",
-       "      <td>30.0</td>\n",
+       "      <td>150.0</td>\n",
        "      <td>50.0</td>\n",
-       "      <td>Stein</td>\n",
-       "      <td>2023A002</td>\n",
+       "      <td>Frostig</td>\n",
+       "      <td>2023A005</td>\n",
        "      <td>1</td>\n",
-       "      <td>60105.045058</td>\n",
-       "      <td>60106.035058</td>\n",
+       "      <td>60109.371311</td>\n",
+       "      <td>60110.361311</td>\n",
        "      <td>False</td>\n",
        "      <td>2.0</td>\n",
        "      <td>9</td>\n",
@@ -382,17 +359,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>211.56398</td>\n",
-       "      <td>54.0</td>\n",
-       "      <td>3944</td>\n",
+       "      <td>186.17143</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>15956</td>\n",
        "      <td>Hs</td>\n",
-       "      <td>30.0</td>\n",
+       "      <td>150.0</td>\n",
        "      <td>50.0</td>\n",
-       "      <td>Stein</td>\n",
-       "      <td>2023A002</td>\n",
+       "      <td>Frostig</td>\n",
+       "      <td>2023A005</td>\n",
        "      <td>1</td>\n",
-       "      <td>60105.045058</td>\n",
-       "      <td>60106.035058</td>\n",
+       "      <td>60109.371311</td>\n",
+       "      <td>60110.361311</td>\n",
        "      <td>False</td>\n",
        "      <td>2.0</td>\n",
        "      <td>9</td>\n",
@@ -404,20 +381,20 @@
        "</div>"
       ],
       "text/plain": [
-       "       raDeg  decDeg  fieldID filter  visitExpTime  priority progPI  progName  \\\n",
-       "0  211.56398    54.0     3944      Y          20.0      50.0  Stein  2023A002   \n",
-       "1  211.56398    54.0     3944      J          30.0      50.0  Stein  2023A002   \n",
-       "2  211.56398    54.0     3944     Hs          30.0      50.0  Stein  2023A002   \n",
+       "       raDeg  decDeg  fieldID filter  visitExpTime  priority   progPI  \\\n",
+       "0  186.17143    13.0    15956      Y         150.0      50.0  Frostig   \n",
+       "1  186.17143    13.0    15956      J         150.0      50.0  Frostig   \n",
+       "2  186.17143    13.0    15956     Hs         150.0      50.0  Frostig   \n",
        "\n",
-       "   progID    validStart     validStop  observed  maxAirmass  ditherNumber  \\\n",
-       "0       1  60105.045058  60106.035058     False         2.0             9   \n",
-       "1       1  60105.045058  60106.035058     False         2.0             9   \n",
-       "2       1  60105.045058  60106.035058     False         2.0             9   \n",
+       "   progName  progID    validStart     validStop  observed  maxAirmass  \\\n",
+       "0  2023A005       1  60109.371311  60110.361311     False         2.0   \n",
+       "1  2023A005       1  60109.371311  60110.361311     False         2.0   \n",
+       "2  2023A005       1  60109.371311  60110.361311     False         2.0   \n",
        "\n",
-       "   ditherStepSize  obsHistID  \n",
-       "0            15.0          0  \n",
-       "1            15.0          1  \n",
-       "2            15.0          2  "
+       "   ditherNumber  ditherStepSize  obsHistID  \n",
+       "0             9            15.0          0  \n",
+       "1             9            15.0          1  \n",
+       "2             9            15.0          2  "
       ]
      },
      "execution_count": 12,
